# ddd-cqrs-es

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  SKILLS.md  deny.toml
.claude/: ecc-tools.json  identity.json
.codex/: AGENTS.md
crates/ddd-auth/: Cargo.toml
crates/ddd-auth/src/: domain.rs  error.rs  ids.rs  lib.rs  principal.rs  provider.rs  storage.rs  token.rs
crates/ddd-authz/: Cargo.toml
crates/ddd-authz/src/: error.rs  evaluator.rs  lib.rs  model.rs  storage.rs  tuple.rs  types.rs
crates/ddd-cli/: Cargo.toml
crates/ddd-cli/src/: lib.rs  main.rs  manifest.rs  model.rs  operation.rs  render.rs
crates/ddd-cli/templates/auth-stack/: .env.example  README.md
crates/ddd-cli/templates/auth-stack/proto/: auth.proto  authz.proto
crates/ddd-cli/templates/auth-stack/scripts/: report_oauth_evidence.sh  reset_db.sh  verify_auth_passkeys.mjs  verify_live_oauth_browser.mjs  verify_live_oauth_callback.sh  verify_oauth_credentials.sh
crates/ddd-cli/templates/auth-stack/src/: application.rs  error.rs  grpc.rs  oauth.rs  server.rs  store.rs
crates/ddd-cli/templates/basic/: README.md
crates/ddd-cli/templates/custom/: README.md
crates/ddd-cli/templates/fullstack/: .env.example  Cargo.toml  Cargo.toml.template  DESIGN.md  Makefile  README.md  build.rs  compose.yaml  input.css  package.json  spin.production.toml.example  spin.toml
crates/ddd-cli/templates/fullstack/migrations/postgres/: 0001_app_storage.sql
crates/ddd-cli/templates/fullstack/proto/: audit.proto  auth.proto  organization.proto
crates/ddd-cli/templates/fullstack/scripts/: agent_dev_login.mjs  audit_all_pages.mjs  benchmark_fullstack.sh  check_loc.sh  report_oauth_evidence.sh  reset_db.sh  sync_fullstack_template.sh  verify_auth_oauth_dev_browser.mjs  verify_auth_pages.mjs  verify_auth_passkeys.mjs  verify_fullstack.sh  verify_live_oauth_browser.mjs  verify_live_oauth_callback.sh  verify_live_oauth_preflight.sh  verify_oauth_credentials.sh  verify_toolchain.sh  verify_wasi_artifact.sh  verify_workspace_settings.mjs  verify_workspace_vault.mjs
crates/ddd-cli/templates/fullstack/src/: app.rs  app_dashboard_board.rs  app_dashboard_resources.rs  application.rs  auth_product.rs  contracts.rs  grpc.rs  lib.rs  oauth.rs  rest.rs  server.rs  store.rs
crates/ddd-cli/templates/fullstack/src/access/: context.rs  requirement.rs  tests.rs
crates/ddd-cli/templates/fullstack/src/app/: helpers.rs  mod.rs  path.rs  router.rs  theme.rs
crates/ddd-cli/templates/fullstack/src/app/account/: mod.rs  passkeys.rs  password.rs  profile.rs  providers.rs  sessions.rs  vault.rs
crates/ddd-cli/templates/fullstack/src/app/admin/: mod.rs
crates/ddd-cli/templates/fullstack/src/app/auth/: forms.rs  mod.rs  pages.rs
crates/ddd-cli/templates/fullstack/src/app/dashboard/: board.rs  resources.rs
crates/ddd-cli/templates/fullstack/src/app/dashboard/board/: home.rs  layout.rs  mod.rs  render.rs
crates/ddd-cli/templates/fullstack/src/app/organizations/: create_modal.rs  home.rs  legacy_pages.rs  links.rs  mod.rs
crates/ddd-cli/templates/fullstack/src/app/server_fns/: account.rs  admin.rs  dashboard.rs  mod.rs  organizations.rs
crates/ddd-cli/templates/fullstack/src/app/workspace/: mod.rs
crates/ddd-cli/templates/fullstack/src/app/workspace_settings/: audit.rs  danger.rs  general.rs  invitations.rs  members.rs  mod.rs  roles.rs  shared.rs  shell.rs
crates/ddd-cli/templates/fullstack/src/application/: account.rs  authorization.rs  common.rs  dashboard.rs  ingress.rs  mod.rs  organization.rs  profile.rs  request_auth.rs  session.rs  vault.rs
crates/ddd-cli/templates/fullstack/src/auth_product/: errors.rs  flows.rs  infra.rs  mod.rs  organization.rs  password.rs  runtime.rs  session.rs
crates/ddd-cli/templates/fullstack/src/contracts/: admin.rs  auth.rs  dashboard.rs  organization.rs  resources.rs  vault.rs
crates/ddd-cli/templates/fullstack/src/grpc/: admin.rs  audit.rs  auth.rs  authorization.rs  mod.rs  organization.rs  serve.rs
crates/ddd-cli/templates/fullstack/src/store/: board.rs  health.rs  keys.rs  notifications.rs  org_slug.rs  query_exec.rs  seed.rs  sql.rs  vault.rs
crates/ddd-cli/templates/fullstack/src/ui/: banner.rs  brand.rs  button.rs  classes.rs  combobox.rs  field.rs  kicker.rs  mod.rs  panel.rs  shells.rs
crates/ddd-cli/templates/leptos-wasi/: README.md
crates/ddd-cli/templates/native-api/: README.md
crates/ddd-cli/templates/worker/: README.md
crates/ddd-cli/tests/: cli.rs
docs/: PRD.md  architecture.md  cli.md  docs.json  getting-started.md  index.md  persistence.md  projections.md  testing.md  wasmtime-vs-spin-comparison.md
examples/: bank_account.rs
examples/auth-stack/: .env.example  Cargo.toml  Makefile  build.rs  input.css  package-lock.json  spin.production.toml.example  spin.toml
examples/auth-stack/proto/: authz.proto
examples/auth-stack/scripts/: verify_auth_oauth_dev_browser.mjs  verify_auth_pages.mjs  verify_auth_stack.sh  verify_live_oauth_preflight.sh
examples/auth-stack/src/: app.rs  contracts.rs  lib.rs  rest.rs
examples/counter-app/: .env.example  Cargo.toml  Makefile  README.md  build.rs  package-lock.json  package.json  spin.redis.toml  spin.toml
examples/counter-app/.cargo/: config.toml
examples/counter-app/proto/: counter.proto
examples/counter-app/redis-trigger/: Cargo.toml
examples/counter-app/redis-trigger/src/: lib.rs
examples/counter-app/scripts/: reset_db.sh  verify_browser.mjs  verify_grpc_streaming.sh  verify_toolchain.sh  verify_wasi_artifact.sh
examples/counter-app/src/: app.rs  application.rs  auth.rs  domain.rs  error.rs  grpc.rs  lib.rs  rest.rs  server.rs  store.rs  wasip3_random.rs
scripts/: ci-check.sh  regenerate-fullstack-example.sh  release-crates-io.sh  release-fullstack-crates-io.sh  verify-docs.sh  verify-registry-consumer.sh  version.sh
src/: adapters.rs  aggregate.rs  async_api.rs  command.rs  error.rs  event.rs  event_store.rs  idempotency.rs  lib.rs  memory.rs  metadata.rs  mysql.rs  postgres.rs  process_manager.rs  projection.rs  redis.rs  repository.rs  repository_support.rs  (+7 more)
(+195 files in other folders)
