[package]
name = "ddd_cqrs_es"
version = "0.3.0-rc.1"
edition = "2021"
rust-version = "1.93.0"
authors = ["Uriah G"]
description = "A lightweight DDD, CQRS, and Event Sourcing framework for Rust"
license = "MIT"
repository = "https://github.com/codeitlikemiley/ddd-cqrs-es"
documentation = "https://docs.rs/ddd_cqrs_es"
homepage = "https://github.com/codeitlikemiley/ddd-cqrs-es"
keywords = ["ddd", "cqrs", "event-sourcing", "events"]
categories = ["development-tools", "rust-patterns"]
exclude = [".agents/**"]

[workspace]
members = [".", "crates/ddd-cli"]
default-members = [".", "crates/ddd-cli"]
exclude = [
    "examples/counter-app",
    "examples/counter-app/redis-trigger",
    "examples/fullstack-app",
]
resolver = "2"

[lib]
name = "ddd_cqrs_es"
path = "src/lib.rs"

[features]
default = ["uuid"]
async = ["dep:async-trait", "dep:tokio"]
serde = ["dep:serde"]
json = ["serde", "dep:serde_json"]
uuid = ["dep:uuid"]
chrono = ["dep:chrono"]
tracing = ["dep:tracing"]
postgres = ["json", "dep:postgres"]
sqlite = ["json", "dep:rusqlite"]
mysql = ["json", "dep:mysql"]
json-file = ["json", "async"]
redis = ["json", "async"]
wasm = ["uuid/js"]
wasi-http = ["dep:wasip3", "dep:http", "dep:http-body-util", "dep:bytes", "json"]
wasi-neon = ["wasi-http"]
wasi-libsql = ["wasi-http"]
spin-sqlite = ["dep:spin-sdk", "json"]
spin-postgres = ["dep:spin-sdk", "json"]
spin-mysql = ["dep:spin-sdk", "spin-sdk/mysql", "json"]
spin-redis = ["redis", "dep:spin-sdk", "spin-sdk/redis"]
wasi-redis = ["redis"]
wasi-supabase-rpc = ["wasi-http"]


[dependencies]
async-trait = { version = "0.1", optional = true }
chrono = { version = "0.4", default-features = false, features = ["clock", "serde", "std"], optional = true }
postgres = { version = "0.19", features = ["with-serde_json-1"], optional = true }
rusqlite = { version = "0.40.1", optional = true }
mysql = { version = "28.0.0", optional = true }
serde = { version = "1", features = ["derive"], optional = true }
serde_json = { version = "1", optional = true }
tokio = { version = "1", features = ["time", "sync", "rt"], optional = true }
tracing = { version = "0.1", optional = true }
uuid = { version = "1", features = ["serde", "v4"], optional = true }
# Final WASI HTTP bindings shared with leptos-wasi-runtime 0.4.2-rc.1 and the maintained Spin fork.
wasip3 = { version = "=0.7.0", features = ["http-compat"], optional = true }
http = { version = "1.1.0", optional = true }
http-body-util = { version = "0.1.2", optional = true }
bytes = { version = "1.6", optional = true }
spin-sdk = { git = "https://github.com/codeitlikemiley/spin-rust-sdk", rev = "a02d330fe9357be2d18e6deef400511195ce6f7f", version = "6.0.0", optional = true }

[lints.rust]
# The retired direct-TCP implementations remain in source temporarily so they
# can be extracted into an unpublished experimental package without losing
# history. They are intentionally absent from the publishable feature graph.
unexpected_cfgs = { level = "allow", check-cfg = [
    'cfg(feature, values("wasi-postgres-tcp", "wasi-mysql"))',
] }

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
