[package]
name = "ddd-cqrs-es-cli"
version = "0.3.0-rc.1"
edition = "2021"
rust-version = "1.93.0"
authors = ["Uriah G"]
description = "Scaffolding CLI for ddd_cqrs_es applications"
license = "MIT"
repository = "https://github.com/codeitlikemiley/ddd-cqrs-es"

[[bin]]
name = "ddd"
path = "src/main.rs"

[lib]
name = "ddd_cli"
path = "src/lib.rs"

[dependencies]
anyhow = "1"
clap = { version = "4.5", features = ["derive"] }
heck = "0.5"
include_dir = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml_edit = "0.25.12"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
