[package]
name = "auth_stack"
version = "0.1.0"
edition = "2024"
rust-version = "1.93.0"
authors = ["codeitlikemiley <codeitlikemiley@gmail.com>"]
description = "A Spin fullstack authentication and authorization service for ddd_cqrs_es"
build = "build.rs"

[workspace]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
any_spawner = { version = "0.3.0", features = ["futures-executor"] }
bytes = "1.7.2"
base64 = "0.22"
console_error_panic_hook = "0.1"
futures = "0.3.30"
hmac = "0.12"
http = "1.1.0"
http-body = { version = "1.0", optional = true }
http-body-util = { version = "0.1.2", optional = true }
hydration_context = { version = "0.3.0" }
argon2 = { version = "0.5", default-features = false, features = ["alloc"] }
getrandom = "0.2"
leptos = { version = "0.8.19" }
leptos_meta = { version = "0.8.6" }
leptos_router = { version = "0.8.13" }
leptos_wasi = { version = "0.3.1", default-features = false, features = ["wasip3"], optional = true }
server_fn = { version = "0.8.12", features = ["axum-no-default"] }
spin-sdk = { version = "6.0.0", optional = true }
# Keep wasip3 aligned with spin-sdk 6.0.0 and leptos_wasi 0.3.1.
# wasip3 0.7.0 compiles but breaks Spin at runtime with a
# wasi:http/types resource mismatch (`response` has the wrong type).
wasip3 = { version = "0.6.0", features = ["http-compat"], optional = true }
wit-bindgen = { version = "0.57.1", features = ["inter-task-wakeup"], optional = true }
wasm-bindgen = { version = "=0.2.125", optional = true }
wasm-bindgen-futures = { version = "0.4", optional = true }
web-sys = { version = "0.3", features = ["Location", "Storage", "Window"], optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3.18", features = ["fmt", "env-filter"], optional = true }
prost = { version = "0.13", optional = true }
pbkdf2 = "0.12"
sha2 = "0.10"
tonic = { version = "0.12", default-features = false, features = ["codegen", "prost"], optional = true }
ddd-auth = { path = "../../crates/ddd-auth", default-features = false, features = ["json", "jwt", "oauth", "passkeys", "wasi", "tracing"] }
ddd-authz = { path = "../../crates/ddd-authz", default-features = false, features = ["json", "wasi", "tracing"] }
ddd_cqrs_es = { path = "../../", default-features = false, features = ["json", "serde", "async", "tracing", "json-file"] }

[build-dependencies]
tonic-build = { version = "0.12", default-features = false, features = ["prost"] }

[features]
hydrate = [
  "leptos/hydrate",
  "dep:wasm-bindgen",
  "dep:wasm-bindgen-futures",
  "dep:web-sys",
]
ssr = [
  "leptos/ssr",
  "leptos_meta/ssr",
  "leptos_router/ssr",
  "dep:leptos_wasi",
  "dep:wasip3",
  "dep:wit-bindgen",
  "dep:http-body",
  "dep:http-body-util",
  "dep:tracing-subscriber",
]
sqlite = [
  "ssr",
  "dep:spin-sdk",
  "spin-sdk/variables",
  "ddd_cqrs_es/spin-sqlite",
]
postgres = [
  "ssr",
  "dep:spin-sdk",
  "spin-sdk/variables",
  "ddd_cqrs_es/spin-postgres",
]
mysql = [
  "ssr",
  "dep:spin-sdk",
  "spin-sdk/variables",
  "spin-sdk/mysql",
  "ddd_cqrs_es/spin-mysql",
]
spin-grpc = [
  "ssr",
  "dep:spin-sdk",
  "spin-sdk/grpc",
  "spin-sdk/variables",
  "dep:prost",
  "dep:tonic",
]
oauth-providers = []
passkeys = []

[profile.wasm-release]
inherits = "release"
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"

[package.metadata.leptos]
output-name = "auth_stack"
tailwind-input-file = "input.css"
assets-dir = "public"

lib-profile-release = "wasm-release"
lib-features = ["hydrate"]

bin-profile-release = "wasm-release"
bin-target-triple = "wasm32-wasip2"
bin-features = ["ssr"]
