[package]
name = "counter_app"
version = "0.1.0"
edition = "2024"
rust-version = "1.93.0"
authors = ["codeitlikemiley <codeitlikemiley@gmail.com>"]
description = "A Leptos application exporting the final WASI HTTP component world"
build = "build.rs"

[workspace]

[lib]
crate-type = ["cdylib"]

[dependencies]
any_spawner = { version = "0.3.0", features = ["futures-executor"] }
bytes = "1.7.2"
console_error_panic_hook = "0.1"
futures = "0.3.30"
getrandom03 = { package = "getrandom", version = "0.3.4" }
hydration_context = { version = "0.3.0" }
leptos = { version = "0.8.20", default-features = false }
leptos_meta = { version = "0.8.6", default-features = false }
leptos_router = { version = "0.8.14", default-features = false }
leptos_wasi = { version = "=0.4.2-alpha.3", default-features = false, features = ["wasip3", "islands-router", "tracing"], optional = true }
server_fn = { version = "0.8.13", default-features = false }
spin-sdk = { git = "https://github.com/codeitlikemiley/spin-rust-sdk", rev = "a02d330fe9357be2d18e6deef400511195ce6f7f", version = "6.0.0", optional = true }
http = "1.1.0"
http-body = { version = "1.0", optional = true }
http-body-util = { version = "0.1.2", optional = true }
wasip3 = { version = "=0.7.0", features = ["http-compat"], optional = true }
wit-bindgen = { version = "=0.59.0", features = ["async-spawn", "inter-task-wakeup"], optional = true }
wit-bindgen-spin-compat = { package = "wit-bindgen", version = "=0.57.1", features = ["inter-task-wakeup"], optional = true }
wasm-bindgen = { version = "=0.2.126", optional = true }
wasm-bindgen-futures = { version = "0.4", optional = true }
web-sys = { version = "0.3", features = ["Document", "Element", "EventSource", "EventTarget", "MessageEvent", "Storage", "Window"], optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2"
md5 = "0.7"
async-trait = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3.18", features = ["fmt", "env-filter"], optional = true }
ddd_cqrs_es = { path = "../../", default-features = false, features = ["json", "serde", "async", "tracing", "json-file"] }
rustls = { version = "0.23.12", default-features = false, features = ["std", "tls12"], optional = true }
rustls-rustcrypto = { version = "0.0.2-alpha", optional = true }
webpki-roots = { version = "0.26.3", optional = true }
sha2 = { version = "0.10.8", optional = true }
hmac = { version = "0.12.1", optional = true }
pbkdf2 = { version = "0.12.2", optional = true }
base64 = { version = "0.22.1", optional = true }
prost = { version = "0.13", optional = true }
tonic = { version = "0.12", default-features = false, features = ["codegen", "prost"], optional = true }
wasi-auth = { version = "=0.1.0-alpha.4", default-features = false, optional = true }

[target.wasm32-unknown-unknown.dependencies]
getrandom03 = { package = "getrandom", version = "0.3.4", features = ["wasm_js"] }

[build-dependencies]
tonic-build = { version = "0.12", default-features = false, features = ["prost"] }

[features]
hydrate = [
  "leptos/hydrate",
  "leptos/islands",
  "leptos/islands-router",
  "dep:wasm-bindgen",
  "dep:wasm-bindgen-futures",
  "dep:web-sys",
]
ssr = [
  "leptos/ssr",
  "leptos/islands",
  "leptos/islands-router",
  "leptos_meta/ssr",
  "leptos_router/ssr",
  "server_fn/axum-no-default",
  "dep:leptos_wasi",
  "dep:wasip3",
  "dep:wit-bindgen",
  "dep:wit-bindgen-spin-compat",
  "dep:http-body",
  "dep:http-body-util",
  "dep:tracing-subscriber",
]
sqlite = [
  "ssr",
  "dep:spin-sdk",
  "ddd_cqrs_es/spin-sqlite",
]
postgres = [
  "ssr",
  "dep:rustls",
  "dep:rustls-rustcrypto",
  "dep:webpki-roots",
  "dep:sha2",
  "dep:hmac",
  "dep:pbkdf2",
  "dep:base64",
  "dep:spin-sdk",
  "ddd_cqrs_es/wasi-postgres-tcp",
  "ddd_cqrs_es/spin-postgres",
]
neon = [
  "ssr",
  "ddd_cqrs_es/wasi-neon",
]
libsql = [
  "ssr",
  "ddd_cqrs_es/wasi-libsql",
]
supabase = [
  "ssr",
  "ddd_cqrs_es/wasi-supabase-rpc",
]
redis = [
  "ssr",
  "ddd_cqrs_es/redis",
]
mysql = [
  "ssr",
]
spin-mysql = [
  "mysql",
  "dep:spin-sdk",
  "spin-sdk/mysql",
  "ddd_cqrs_es/spin-mysql",
]
wasi-mysql = [
  "mysql",
  "ddd_cqrs_es/wasi-mysql",
]
spin-redis = [
  "redis",
  "dep:spin-sdk",
  "ddd_cqrs_es/spin-redis",
]
wasi-redis = [
  "redis",
  "ddd_cqrs_es/wasi-redis",
]
spin-grpc = [
  "ssr",
  "dep:spin-sdk",
  "spin-sdk/grpc",
  "dep:prost",
  "dep:tonic",
  "dep:wasi-auth",
  "wasi-auth/spin-grpc",
]
auth = ["spin-grpc", "spin-sdk/variables"]

[profile.wasm-release]
inherits = "release"
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"

[profile.wasm-benchmark]
inherits = "release"
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = "symbols"

[package.metadata.leptos]
output-name = "counter_app"
tailwind-input-file = "input.css"
assets-dir = "public"
disable-erase-components = true

# == Hydrate (client)
lib-profile-release = "wasm-release"
lib-features = ["hydrate"]

# == SSR
bin-profile-release = "wasm-release"
bin-target-triple = "wasm32-wasip2"
bin-features = ["ssr"]
bin-target-dir = "target/server"
