[package]
name = "counter_app_redis_trigger"
version = "0.1.0"
edition = "2024"
rust-version = "1.93.0"
publish = false

[workspace]

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
spin-sdk = { version = "6.0.0", features = ["redis"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3.18", features = ["fmt", "env-filter"] }
