[package]
name = "fullstack-app"
version = "0.1.0"
edition = "2024"
rust-version = "1.93.0"
authors = ["codeitlikemiley <codeitlikemiley@gmail.com>"]
description = "A Spin fullstack authentication and authorization service for ddd_cqrs_es"
build = "build.rs"

[workspace]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
aes-gcm = { version = "0.10.3", optional = true }
bytes = { version = "1.7.2", optional = true }
base64 = { version = "0.22", optional = true }
console_error_panic_hook = "0.1"
futures = { version = "0.3.30", optional = true }
form_urlencoded = { version = "1.2", optional = true }
http = "1.1.0"
http-body = { version = "1.0", optional = true }
http-body-util = { version = "0.1.2", optional = true }
getrandom = { version = "0.2", optional = true }
getrandom03 = { package = "getrandom", version = "0.3.4" }
leptos = { version = "0.8.20", default-features = false }
leptos_meta = { version = "0.8.6", default-features = false }
leptos_router = { version = "0.8.14", default-features = false }
leptos_wasi = { package = "leptos-wasi-runtime", version = "=0.4.2-rc.1", default-features = false, features = ["wasip3", "islands-router", "tracing"], optional = true }
server_fn = { version = "0.8.13", default-features = false }
spin-sdk = { git = "https://github.com/codeitlikemiley/spin-rust-sdk", rev = "a02d330fe9357be2d18e6deef400511195ce6f7f", version = "6.0.0", optional = true }
wasip3 = { version = "=0.7.0", features = ["http-compat"], optional = true }
# `wasip3 0.7.0` is generated against wit-bindgen 0.57.1. A second runtime
# version duplicates unit-stream intrinsics and cannot be component-linked.
wit-bindgen = { version = "=0.57.1", features = ["async-spawn", "inter-task-wakeup"], optional = true }
wasm-bindgen = { version = "=0.2.126", optional = true }
wasm-bindgen-futures = { version = "0.4", optional = true }
js-sys = { version = "0.3", optional = true }
web-sys = { version = "0.3", features = ["DataTransfer", "Document", "DomTokenList", "DragEvent", "Element", "Event", "EventTarget", "HtmlElement", "HtmlInputElement", "HtmlSelectElement", "HtmlTextAreaElement", "Location", "NodeList", "Storage", "Window"], optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", optional = true }
thiserror = { version = "2", optional = true }
tracing = { version = "0.1", optional = true }
tracing-subscriber = { version = "0.3.18", features = ["fmt", "env-filter"], optional = true }
prost = { version = "0.13", optional = true }
sha2 = { version = "0.10", optional = true }
tonic = { version = "0.12", default-features = false, features = ["codegen", "prost"], optional = true }
tokio = { version = "1.52", features = ["macros", "rt"], optional = true }
wasi-auth = { version = "=0.1.0-rc.2", default-features = false, optional = true }
ddd_cqrs_es = { version = "=0.3.0-rc.2", default-features = false, features = ["json", "serde", "async", "tracing", "json-file"], optional = true }
qrcode = { version = "0.14", default-features = false, features = ["svg"], optional = true }

[target.wasm32-unknown-unknown.dependencies]
getrandom03 = { package = "getrandom", version = "0.3.4", features = ["wasm_js"] }

[build-dependencies]
tonic-build = { version = "0.12", default-features = false, features = ["prost"] }
wasi-auth = { version = "=0.1.0-rc.2", default-features = false, features = ["cedar"] }

# Keep every transitive SDK edge on the audited final-WASI revision until an
# upstream release contains the same wasip3 graph.
[patch.crates-io]
spin-sdk = { git = "https://github.com/codeitlikemiley/spin-rust-sdk", rev = "a02d330fe9357be2d18e6deef400511195ce6f7f" }
# Local wasi-auth for HTML mail templates until the next published rc.
wasi-auth = { path = "../../../wasi-auth/crates/wasi-auth" }

[features]
default = []
mail-capture = ["wasi-auth/mail-capture"]
mail-http = ["wasi-auth/mail-http"]
spicedb = ["wasi-auth/spicedb"]
migrate = ["dep:serde_json", "dep:tokio", "dep:wasi-auth", "wasi-auth/postgres-native"]
hydrate = [
  "leptos/hydrate",
  "leptos/islands",
  "leptos/islands-router",
  "dep:wasm-bindgen",
  "dep:wasm-bindgen-futures",
  "dep:js-sys",
  "dep:web-sys",
  "dep:serde_json",
  "dep:qrcode",
]
ssr = [
  "leptos/ssr",
  "leptos/islands",
  "leptos/islands-router",
  "leptos_meta/ssr",
  "leptos_router/ssr",
  "server_fn/axum-no-default",
  "dep:aes-gcm",
  "dep:base64",
  "dep:bytes",
  "dep:ddd_cqrs_es",
  "dep:form_urlencoded",
  "dep:futures",
  "dep:getrandom",
  "dep:serde_json",
  "dep:sha2",
  "dep:thiserror",
  "dep:tracing",
  "dep:wasi-auth",
  "wasi-auth/fullstack-spin",
  "dep:leptos_wasi",
  "dep:wasip3",
  "dep:wit-bindgen",
  "dep:http-body",
  "dep:http-body-util",
  "dep:tracing-subscriber",
]
postgres = [
  "ssr",
  "dep:spin-sdk",
  "spin-sdk/variables",
  "wasi-auth/postgres-spin",
  "ddd_cqrs_es/spin-postgres",
]
spin-grpc = [
  "ssr",
  "dep:spin-sdk",
  "spin-sdk/grpc",
  "spin-sdk/variables",
  "dep:prost",
  "dep:tonic",
]
oauth-providers = []
passkeys = []

[profile.wasm-release]
inherits = "release"
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"

[profile.wasm-benchmark]
inherits = "release"
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = "symbols"

[package.metadata.leptos]
output-name = "fullstack_app"
bin-target = "fullstack-app"
tailwind-input-file = "input.css"
assets-dir = "public"
disable-erase-components = true

lib-profile-release = "wasm-release"
lib-features = ["hydrate"]

bin-profile-release = "wasm-release"
bin-target-triple = "wasm32-wasip2"
bin-features = ["ssr"]
